--- a/snake.html
+++ b/snake.html
@@ -24,11 +24,13 @@
 
     var snakeBody = [];
 
+    var speed = 5;
+
     var food = {};
 
     function init() {
         snakeBody = [];
-        for (var i = 0; i < 5; i++) {
+        for (var i = 0; i < speed; i++) {
             snakeNode(parseInt(snakeNumX / 2) + i, snakeNumY / 2)
         }
 
@@ -57,29 +59,51 @@
     }
 
     function snakeMove() {
-        for (var i = snakeBody.length - 1; i > 0; i--) {
-            snakeBody[i].x = snakeBody[i - 1].x;
-            snakeBody[i].y = snakeBody[i - 1].y;
-        }
+        var snakeHead = {x: snakeBody[0].x, y: snakeBody[0].y};
+
         switch (snakeDir) {
             case 1:
-                snakeBody[0].y -= 1;
+                snakeHead.y -= 1;
                 break;
             case 2:
-                snakeBody[0].x += 1;
+                snakeHead.x += 1;
                 break;
             case -1:
-                snakeBody[0].y += 1;
+                snakeHead.y += 1;
                 break;
             case -2:
-                snakeBody[0].x -= 1;
+                snakeHead.x -= 1;
                 break;
         }
 
-        if (food.x == snakeBody[0].x && food.y == snakeBody[0].y) {
+        for (var i = snakeBody.length - 1; i > 0; i--) {
+            snakeBody[i].x = snakeBody[i - 1].x;
+            snakeBody[i].y = snakeBody[i - 1].y;
+
+            if (snakeBody[i].x == snakeHead.x && snakeBody[i].y == snakeHead.y) {
+                gameOver();
+                return;
+            }
+        }
+
+        snakeBody[0] = snakeHead;
+
+        if (snakeHead.x < 0 || snakeHead.x > snakeNumX - 1 || snakeHead.y < 0 || snakeHead.y > snakeNumY - 1) {
+            gameOver();
+        }
+
+        if (food.x == snakeBody[0].x && food.y == snakeBody[0].y) {//吃到食物
+            speed = snakeBody.length;
+
             snakeBody.push({x: snakeBody[snakeBody.length - 1].x, y: snakeBody[snakeBody.length - 1].y});
             putFood();
         }
+
+        drawSnake();
+    }
+
+    function gameOver() {
+        init();
     }
 
     init();
@@ -128,10 +152,9 @@
         food.y = foodY;
     }
 
-    setInterval(function () {
+    var timer = setInterval(function () {
         snakeMove();
-        drawSnake();
-    }, 500)
+    }, 500 - speed * 5);
 </script>
 </body>
 </html>
